fix: img avatar z-index

--- a/src/blocks/profile/__overlay-avatar/profile__overlay-avatar.css
+++ b/src/blocks/profile/__overlay-avatar/profile__overlay-avatar.css
@@ -14,5 +14,4 @@
   color: #000;
   font-size: 0;
   line-height: 0;
-  z-index: 2;
 }
